--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
          Tutorial Case
    
          Tulsa's New Year's Bash
-         Author: 
-         Date:   
+         Author: Gabriel Hernandez
+         Date: 2/5/19   
    
-         Filename: tny_clock.html
+         Filename: index.html
    
       -->
       
@@ -18,7 +18,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <title>Tulsa's New Year's Bash</title>
       <link href="tny_reset.css" rel="stylesheet" />
-      <link href="tny_styles.css" rel="stylesheet" />    
+      <link href="tny_styles.css" rel="stylesheet" /> 
+      <script src="tny_script.js" defer></script>   
    </head>
 
    <body>
